# agent_forge

./: .gitignore  README.md  bash.exe.stackdump  pyproject.toml
agentforge/: __init__.py  api.py  cli.py
agentforge/core/: checkpoint.py  cli_executor.py  config.py  context_manager.py  cost_tracker.py  human_gate.py  orchestrator.py  plugin_registry.py  profile.py  resources.py  template_copier.py
agentforge/learning/: analyzer.py  extractor.py  injector.py  knowledge_base.py
agentforge/models/: agent.py  plan.py  sprint.py  state.py
agents/analyst/prompts/: system.md
agents/evaluator/prompts/: global_qa.md  sprint_evaluation.md
agents/planner/prompts/: system.md
config/: agents.yaml  defaults.yaml  learning.yaml  orchestrator.yaml
knowledge/: agentforge-lessons.yaml  antipatterns.json  model-dispatch-experience.yaml  patterns.json  session_summary_2026-04-15.md  vui-project-lessons.yaml
knowledge/project_history/: VUI绯荤粺.json
profiles/: web-app.yaml
templates/api/fastapi/: pyproject.toml
templates/api/fastapi/app/: config.py  main.py
templates/infra/docker/: Dockerfile.backend  docker-compose.yaml
tests/: conftest.py  test_analyzer.py  test_checkpoint.py  test_cli.py  test_cli_executor.py  test_config.py  test_context_manager.py  test_cost_tracker.py  test_e2e_real_cli.py  test_extractor.py  test_human_gate.py  test_injector.py  test_integration.py  test_knowledge_base.py  test_models.py  test_orchestrator.py  test_plugin_registry.py  test_profile.py  test_profile_integration.py  test_python_api.py  test_template_copier.py
(+80 files in other folders)
