[project]
name = "agentforge"
version = "0.1.0"
description = "Long-running multi-agent application generation framework"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
agentforge = "agentforge.cli:main"

[tool.setuptools.packages.find]
include = ["agentforge*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
